[project]
name = "langgraph-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.13.0",
    "langchain>=1.3.9",
    "langchain-nvidia-ai-endpoints>=1.3.0",
    "langgraph>=1.2.0",
    "langgraph-prebuilt>=1.1.0",
    "logger>=1.4",
    "pypdf>=6.13.2",
    "sentence-transformers>=5.5.1",
]
